--- a/LearningSeeds/mine.css
+++ b/LearningSeeds/mine.css
@@ -55,7 +55,7 @@ body{
     41.3%{
         left:-200%;
     }
-    66.6%{
+    66.6%{ 
         left:-200%;
     }
     74.6%{
@@ -150,7 +150,7 @@ body{
     border-radius: 5%;
     margin: 0.4rem;
     width: 10rem;
-    transition: transform 0.3s ease-in-out;
+    transition: 0.6s;
 }
 .til{
     display: block;
@@ -248,6 +248,58 @@ footer{
     margin-top: 2rem;
 }
 /* Footer ends */
+/* NAVBAR */
+.hamburger{
+    display: none;
+}
+.navlogo img{
+    margin: 1rem;
+    height: 6rem;
+    text-align: left;
+}
+.navs{
+    margin-top: -8rem;
+    /* display: flex; */
+}
+.navs ul{
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+    margin: 1rem;
+    margin-right: 2rem;
+    justify-content: flex-end;
+}
+.navbar{
+    position: sticky;
+    position: -webkit-sticky;
+    z-index: 2;
+    background: #3131317a;
+    height: 8rem;
+}
+.navs li{
+    margin: 1rem;
+    display: inline-block;
+}
+.navbar a{
+    text-decoration: none;
+    color: white;
+    transition: 0.4s;
+}
+.navbar a:hover{
+    color: rgb(165, 162, 162);
+}
+.btndonate{
+    border-radius: 1rem;
+    border: none;
+    cursor: pointer;
+    margin-top: -1rem;
+    padding: 1rem;
+    transition: 0.4s;
+}
+.btndonate:hover{
+    background: rgb(165, 162, 162);
+
+}
 
 /* Responsive styles */
 @media screen and (max-width: 1000px) {
@@ -316,53 +368,3 @@ footer{
         }
 }
 /* 800 pe hamburger+ see boxx ka kya krna hai */
-/* NAVBAR */
-.hamburger{
-    display: none;
-}
-.navlogo img{
-    margin: 1rem;
-    height: 6rem;
-    text-align: left;
-}
-.navs{
-    margin-top: -8rem;
-    /* display: flex; */
-}
-.navs ul{
-    display: flex;
-    flex-direction: row;
-    padding: 1rem;
-    margin: 1rem;
-    margin-right: 2rem;
-    justify-content: flex-end;
-}
-.navbar{
-    position: sticky;
-    position: -webkit-sticky;
-    z-index: 2;
-    background: #3131317a;
-    height: 8rem;
-}
-.navs li{
-    margin: 1rem;
-    display: inline-block;
-}
-.navbar a{
-    text-decoration: none;
-    color: white;
-}
-.navbar a:hover{
-    color: rgb(165, 162, 162);
-}
-.btndonate{
-    border-radius: 1rem;
-    border: none;
-    cursor: pointer;
-    margin: -1rem;
-    padding: 1rem;
-}
-.btndonate:hover{
-    background: rgb(165, 162, 162);
-
-}
