Fixing background img

--- a/pages/css/contact.css
+++ b/pages/css/contact.css
@@ -38,7 +38,7 @@
 body{
   overflow-x: hidden;
     /* margin-left:2rem; */
-    background-image: url('./pics/bge.png');
+    background-image: url('/Images/bge.png');
     /* background-size:cover; */
     background-repeat: repeat;  
     font-family: "Poppins", sans-serif;
