--- a/pages/css/edu.css
+++ b/pages/css/edu.css
@@ -27,7 +27,7 @@
 }
 body{
     /* margin-left:2rem; */
-    background-image: url('./pics/bge.png');
+    background-image: url('/Images/bge.png');
     /* background-size:cover; */
     background-repeat: repeat;  
     /* opacity: 0.7; */
