--- a/pages/css/donations.css
+++ b/pages/css/donations.css
@@ -5,7 +5,7 @@
 body{
   overflow-x: hidden;
     /* margin-left:2rem; */
-    background-image: url('./pics/bge.png');
+    background-image: url('/Images/bge.png');
     /* background-size:cover; */
     background-repeat: repeat;  
     /* opacity: 0.7; */
