--- a/pages/css/contact.css
+++ b/pages/css/contact.css
@@ -1,29 +1,7 @@
 *{
-    margin-top: 0;
-    margin-left: 0;
-    margin-right: 0;
-}
-@media screen and (max-width: 1000px) {
-  .j{
-      display: none;
-  }
-  .upper{
-      flex-direction: column;
-      justify-content: center;
-  }
-  .contact{
-      text-align: center;
-      margin: 0;
-      align-self: center;
-  }
-  .mappy{
-      margin-left: 15%;
-      width: 70%;
-  }
-  .maintext{
-      margin-top: 13vh;
-  }
-
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 #tick {
   margin-left: 57rem;
@@ -37,178 +15,148 @@
 }
 body{
   overflow-x: hidden;
-    /* margin-left:2rem; */
-    background-image: url('/Images/bge.png');
-    /* background-size:cover; */
-    background-repeat: repeat;  
-    font-family: "Poppins", sans-serif;
-    /* opacity: 0.7; */
-    background-color: ivory;
-    /* margin-right: 2rem; */
-    /* background-color: ivory; */
-    /* text-align: center; */
-    color: #005F41;
+  background-image: url('/Images/bge.png');
+  background-repeat: repeat;  
+  font-family: "Poppins", sans-serif;
+  background-color: ivory;
+  color: #005F41;
 }
 .hed{
-    text-align: center;
-    font-family: "DM Serif Display", serif;
-    margin-top: 4rem;
-    font-size: 2.7rem;
+  text-align: center;
+  font-family: "DM Serif Display", serif;
+  margin-top: 4rem;
+  font-size: 2.7rem;
 }
 .hed3{
-    text-align: center;
-    font-family: "DM Serif Display", serif;
-    margin-top: 4rem;
-    font-size: 2.5rem;
+  text-align: center;
+  font-family: "DM Serif Display", serif;
+  margin-top: 4rem;
+  font-size: 2.5rem;
 }
 .hed2{
-    text-align: center;
-    font-family: "DM Serif Display", serif;
-    margin-top: 4rem;
-    font-size: 2rem;
+  text-align: center;
+  font-family: "DM Serif Display", serif;
+  margin-top: 4rem;
+  font-size: 2rem;
 }
 .con{
-    padding-left: 20%;
-    padding-right: 20%;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 .social-icons {
-    text-align: center;
-    margin-top: 2rem; 
-    margin-bottom: 0.5rem;
-  }
+  text-align: center;
+  margin-top: 2rem; 
+  margin-bottom: 0.5rem;
+}
 .social-icons a {
-    color: #333;
-    margin: 0 10px;
-    font-size: 24px;
-  }
+  color: #333;
+  margin: 0 10px;
+  font-size: 24px;
+}
 .mappy{
-    /* margin-top: 3rem; */
-    width: 50%;
-    height: 50vh;
-    /* margin-left: 2%; */
-    align-items: center;
+  width: 50%;
+  height: 50vh;
+  align-items: center;
 }
 #contac{
-    margin-top: 2rem;
-    padding: 1rem;
-    /* align-items: center; */
-    width: 50%;
-    /* margin-left:10% ; */
-}
+  margin-top: 2rem;
+  padding: 1rem;
+  width: 50%;
+  }
 form{
   text-align: center;
 }
 #bttn {
-    background-color: #04a471;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-left: 46%;
-    /* width:8%;      */
+  background-color: #04a471;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 46%;
 }
 form button:hover {
-    background-color: #026d4b;
-    
+  background-color: #026d4b;
 }
 form textarea{
-  /* text-align: center; */
   font-family: "Poppins", sans-serif;
 }
-/* FAq part */
 
-  .faq-container{
-      margin-left:25% ; 
-      align-items: center;
-      font-family: "Poppins", sans-serif;
-      font-size: 1rem;
-  }
-  .faq-answer {
-      display: none;
-      padding: 10px 20px;
-      transition: max-height 0.3s ease-out;
-      max-height: 0;
-      width: 70%;
-      overflow: hidden;
-    color: black;
-    text-align: left;
-    /* margin-left: 15%; */
-    /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+/* FAQ part */
+.faq-container{
+  margin-left:25% ; 
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
 }
-    .faq-answer.active {
-      display: block;
-      max-height: 1000px; 
-    } 
-    
-    .faq-question {
-      font-size: 1rem;
-      background-color: rgba(255, 250, 250, 0.525);
-      color: #333;
-      border-top: 0.2px solid grey;
-      border-bottom: 0.2px solid grey;
-      border-left: none;
-      border-right: none;
-      padding: 10px 20px;
-      width: 70%;
-      text-align: left;
-      cursor: pointer;
-      outline: none;
-      margin: 5px 0;
-    }
-     
-    .faq-question:hover {
-      background-color: #dddddd8a;
-      border-left: solid 3px green;
-    }
+.faq-answer {
+  display: none;
+  padding: 10px 20px;
+  transition: max-height 0.3s ease-out;
+  max-height: 0;
+  width: 70%;
+  overflow: hidden;
+  color: black;
+  text-align: left;
+  }
+
+.faq-answer.active {
+  display: block;
+  max-height: 1000px; 
+} 
+
+.faq-question {
+  font-size: 1rem;
+  background-color: rgba(255, 250, 250, 0.525);
+  color: #333;
+  border-top: 0.2px solid grey;
+  border-bottom: 0.2px solid grey;
+  border-left: none;
+  border-right: none;
+  padding: 10px 20px;
+  width: 70%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+  margin: 5px 0;
+}
   
-  h1{
-      margin-top: 3rem;
-      text-align: center;
+.faq-question:hover {
+  background-color: #dddddd8a;
+  border-left: solid 3px green;
+}
+
+h1{
+  margin-top: 3rem;
+  text-align: center;
+}
+h3{
+  margin-top: 1rem;
+  text-align: center;
+}
+
+a{
+  color: #005F41;
+}
+.norm{
+  margin-left: -60%;
+  margin-top: 2rem;
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
   }
-  h3{
-      margin-top: 1rem;
-      text-align: center;
-  }
-  
-  a{
-      color: #005F41;
-  }
-  .norm{
-      margin-left: -60%;
-      margin-top: 2rem;
-      font-size: 1.3rem;
-      margin-bottom: 1rem;
-  }
-  /* @media only screen and (max-width: 1000px) {
-    .norm{
-      margin-left: 18%;
-      margin-top: 1.5rem;
-      font-size: 1.09rem;
-      margin-bottom: 1rem;
-    }
-  }
-  @media only screen and (max-width: 700px) {
-    .norm{
-      margin-left: 18%;
-      margin-top: 2rem;
-      font-size: 1.09rem;
-      margin-bottom: 1rem;
-    }
-  } */
-  /* NAVBAR */
+
+
+ /* NAVBAR */
 .hamburger{
   display: none;
 }
 .navlogo img{
   margin: 1rem;
-  /* margin-left: 2rem; */
   height: 6rem;
   text-align: left;
 }
 .navs{
   margin-top: -8rem;
-  /* display: flex; */
 }
 .navs ul{
   display: flex;
@@ -250,19 +198,18 @@ form textarea{
   background: rgb(165, 162, 162);
 
 }
-  /* Footer starts */
+
+
+/* Footer starts */
 footer{
   background-color: #f0f0f0;
   padding: 2rem;
-  /* display: flex; */
-  /* justify-content: space-between; */
   top: 3rem;
   left: 0;
   text-align: left;
   background-color: #005F41;
   margin-top: 9rem;
   color: #dce4e4;
-  /* color: pink/; */
 }
 .upper{
   display: flex;
@@ -280,7 +227,6 @@ footer{
   display: flex;
   width: 100%;
   justify-content: center;
-  /* margin: 2rem; */
   padding: 1rem;
 }
 .icon{
@@ -311,42 +257,65 @@ footer{
   text-align: center;
   margin-top: 2rem;
 }
+
 /* Footer ends */
 @media screen and (max-width:850px) {
   .hamburger{
-      display: block;
-      color: white;
-      font-size: 2rem;
-      text-align: right;
-      margin-right: 3rem;
-      margin-top: -6rem;
-      cursor: pointer;
+    display: block;
+    color: white;
+    font-size: 2rem;
+    text-align: right;
+    margin-right: 3rem;
+    margin-top: -6rem;
+    cursor: pointer;
   }
   .navs ul{
-      display: none;
-      /* transition: all 1s ease; */
-      flex-direction:column;
-      background: #2c2b2b;
-      justify-content: flex-start;
-      margin-top: 8rem;
-      width: 50%;
-      height: 90vh;
-      margin-left: 55%;
+    display: none;
+    flex-direction:column;
+    background: #2c2b2b;
+    justify-content: flex-start;
+    margin-top: 8rem;
+    width: 50%;
+    height: 90vh;
+    margin-left: 55%;
   }
   .navs li{
-      padding: 2rem;
-      margin: 1px;
+    padding: 2rem;
+    margin: 1px;
   }
   .btndonate{
-      background: #00000000;
-      color: white;
-      font-family: "Poppins", sans-serif;
-      font-size: 1rem;
+    background: #00000000;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: 1rem;
   }
   .btndonate:hover{
-      background: #514f4f00;
+    background: #514f4f00;
   }
   .navs li:hover{
-      background: #514f4f5e;
+    background: #514f4f5e;
   }
+}
+
+  @media screen and (max-width: 1000px) {
+  .j{
+    display: none;
+  }
+  .upper{
+    flex-direction: column;
+    justify-content: center;
+  }
+  .contact{
+    text-align: center;
+    margin: 0;
+    align-self: center;
+  }  
+  .mappy{
+    margin-left: 15%;
+    width: 70%;
+  }
+  .maintext{
+    margin-top: 13vh;
+  }
+
 }
