--- a/pages/css/mine.css
+++ b/pages/css/mine.css
@@ -1,23 +1,17 @@
-body {
-    /* font-family: Arial, sans-serif; */
+* {
     margin: 0;
     padding: 0;
-    /* background-color: #ffffff; */
 }
 body{
-    /* margin-left:2rem; */
     background-image: url('/Images/bge.png');
-    /* background-size:cover; */
     background-repeat: repeat;  
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    /* opacity: 0.7; */
     background-color: ivory;
-    /* margin-right: 2rem; */
-    /* background-color: ivory; */
     color: #005F41;
 }
+
 /* slideshow */
 .slideshow {
     position: relative;
@@ -81,11 +75,6 @@ body{
     width: 100%;
     height: 100%;
     z-index: 2;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* justify-content: center; */
-    /* transform: translate(-50%, -50%); */
-    /* align-items: center; */
 }
 
 /* headings */
@@ -102,23 +91,22 @@ body{
     font-weight: 300;
     font-style: normal;
     font-variation-settings:"wdth" 100;
-    /* transition: 1s ease; */
     animation: up 1s;
-    /* transform: translateX(-50%); */
 }
+
 .subline{
     color: white;
-    /* margin-top: 1rem; */
     text-align: center;
     font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: italic; 
+    font-weight: 400;
+    font-style: italic; 
     margin-top: 1rem;
     margin-left: 2rem;
     margin-right: 2rem;
     font-size: 2rem;
     animation: up 1s;  
 }
+
 @keyframes up {
   0%{
     transform: translateY(10%);
@@ -127,8 +115,9 @@ body{
     transform: translateY(0%);
   }    
 }
+
 /* donate and join us wale boxes */
-.boxx{
+.mainpage-boxes{
     display: flex;
     text-align: center;
     margin-top: 3rem;
@@ -136,14 +125,13 @@ body{
     padding: 2rem;
     justify-content: center;
 }
-.boxx a{
+.mainpage-boxes a{
     text-decoration: none;
     color: #005F41;
 }
-.e{
+.single-box{
     background-color: rgba(255, 255, 255, 0.6);
     cursor: pointer;
-    /* opacity:0.4 ; */
     height: 5rem;
     padding: 1rem;
     padding-bottom: 2rem;
@@ -155,7 +143,7 @@ body{
 .til{
     display: block;
 }
-.e:hover{
+.single-box:hover{
     transform: scale(1.1);
 }
 .firsticon{
@@ -163,6 +151,7 @@ body{
     padding: 0;
 }
 /* Content overlay ends */
+
 /* mission vision */
 .aboutus{
     margin-top: 6rem;
@@ -190,15 +179,12 @@ body{
 footer{
     background-color: #f0f0f0;
     padding: 2rem;
-    /* display: flex; */
-    /* justify-content: space-between; */
     top: 3rem;
     left: 0;
     text-align: left;
     background-color: #005F41;
     margin-top: 9rem;
     color: #dce4e4;
-    /* color: pink/; */
 }
 .upper{
     display: flex;
@@ -248,6 +234,7 @@ footer{
     margin-top: 2rem;
 }
 /* Footer ends */
+
 /* NAVBAR */
 .hamburger{
     display: none;
@@ -259,7 +246,6 @@ footer{
 }
 .navs{
     margin-top: -8rem;
-    /* display: flex; */
 }
 .navs ul{
     display: flex;
@@ -336,7 +322,6 @@ footer{
     }
     .navs ul{
         display: none;
-        /* transition: all 1s ease; */
         flex-direction:column;
         background: #2c2b2b;
         justify-content: flex-start;
@@ -363,8 +348,7 @@ footer{
     }
 }
 @media screen and (max-width:580px){
-        .boxx{
+        .mainpage-boxes{
             display: none; 
         }
 }
-/* 800 pe hamburger+ see boxx ka kya krna hai */
